--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
  <head>
     <meta charset="utf-8">
-    <title>Fala Jaguarada!</title>
+    <title>Vamos Ficar Ricos!</title>
  </head>
  <boody>
-    <h1>Fala Jaguarada!</h1>
-    <p>Mãe to na cachorrada!</p>
+    <h1>Vamos Ficar Ricos!</h1>
+    <p>Hpx Crypto voa.!</p>
  </boody>
  </html>
